# houston

./: .dockerignore  .env.development  .env.example  .gcloudignore  .git-blame-ignore-revs  .gitignore  .npmrc  BOUNDARY.md  BROOMVA.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md  SECURITY.md  biome.json  cli-deps.json  mprocs.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.firecrawl/: openhuman-agent-coord.md  openhuman-gitbook.md  openhuman-github.md  openhuman-memory.md  openhuman-subconscious.md  openhuman-voice.md
.houston/: activity.json  agent.json  config.json
.husky/: pre-commit
agentstore/: .env.example  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  drizzle.config.ts  middleware.ts  next.config.ts  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc
always-on/: Dockerfile  airlock-egress.sh  airlock-entrypoint.sh  docker-compose.airlock.yml
app/: index.html  package.json  tsconfig.json  vite.config.ts
app/src-tauri/: .env.example  Cargo.toml  Info.plist  build.rs  entitlements-jit.plist  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: app_config.rs  appimage_env.rs  auth.rs  child_guard.rs  codex_oauth_loopback.rs  dmg_guard.rs  engine_supervisor.rs  lib.rs  logging.rs  loopback_util.rs  notification.rs  notification_settings.rs  oauth_loopback.rs  shell_env.rs  store_deep_link.rs  window_focus.rs
app/src-tauri/src/claude_login/: code_input.rs  credential.rs  mod.rs  resolve.rs  runner.rs
app/src-tauri/src/commands/: diagnostics.rs  dialogs.rs  meetings.rs  migration.rs  mod.rs  os.rs  portable.rs  save_file.rs  terminal.rs  update.rs  workspace_root.rs
app/src-tauri/src/dictation/: mod.rs  model.rs  types.rs  verify.rs  wav.rs  whisper.rs
app/src-tauri/src/houston_prompt/: base.rs  integrations.rs  mod.rs  onboarding.rs  questions.rs  routines.rs  skills_memory.rs  workflows.rs
app/src-tauri/src/local_bridge/: commands.rs  detection.rs  frpc.rs  keys.rs  log_sanitize.rs  mod.rs  pidfile.rs  proxy.rs  state.rs  types.rs  url.rs
app/src-tauri/src/meetings/: captions_bridge.js
cloud/: README.md  billing.md  cloudbuild.yaml  code-execution-handoff.md  code-execution.md  openrouter-provider-feature.json  openrouter-provider-plan.md  openrouter-qa-checklist.md  openrouter-spike.md  unit-economics.md  v2-plan.md
convergence/: README.md  final-cutover.md  follow-ups.md  host-sidecar-release-ci.patch  migration-gate.md  migration-plan.md  packaged-app-launch.md  parity-checklist.md  phase0-findings.md
docs/: PROMPT.md  agentic-workspace-substrate.html  agentic-workspace-substrate.md  mobile-architecture.md  platform-dogfood-pattern.md  relay-operations.md
engine-design/: style.css
engine/houston-beltic/: Cargo.toml
engine/houston-beltic/src/: client.rs  config.rs  did_jwk.rs  errors.rs  issuer.rs  lib.rs  webhook_verifier.rs
engine/houston-beltic/src/verifier/: jwks.rs  mod.rs  policy.rs  status_list.rs
engine/houston-centinela-mcp/: .gitignore  Cargo.toml  README.md  WHATSAPP-SETUP.md  arrancar-demo.sh  demo-flow.sh  pedir-permiso.sh  run-whatsapp-demo.sh
engine/houston-centinela-mcp/agent/: CLAUDE.md  houston.json
engine/houston-centinela-mcp/src/: approval.rs  approver.rs  auditor.rs  enrollment.rs  journal.rs  main.rs  notifier.rs  profile.rs  server.rs  state.rs  tools.rs  webhook.rs  whatsapp.rs
engine/houston-centinela-mcp/ui/: index.html  salvoconducto.json
engine/houston-composio/: Cargo.toml
engine/houston-composio/data/: catalog-enriched.json
engine/houston-composio/src/: cli.rs  commands.rs  lib.rs  lifecycle.rs  mcp.rs
engine/houston-composio/src/recommender/: banlist.rs  cache.rs  catalog.rs  embedding_store.rs  embeddings.rs  llm_pick.rs  matcher.rs  mod.rs  types.rs
engine/houston-life/: Cargo.toml  build.rs
engine/houston-life/proto/aios/v1/: identifiers.proto
engine/houston-life/proto/life/v1/: agent.proto  events.proto  identity.proto  wallet.proto
engine/houston-life/src/: client.rs  error.rs  lib.rs
engine/houston-life/tests/: integration_lifed.rs
engine/houston-linear/: Cargo.toml  build.rs
engine/houston-linear/src/: agent_session.rs  auth.rs  callback.rs  commands.rs  connection.rs  error.rs  keychain.rs  lib.rs  models.rs  mutations.rs  pending.rs  queries.rs  rate_limit.rs  reconcile.rs  sync_state.rs  webhook_ledger.rs  webhooks.rs
engine/houston-linear/src/commands/: agent_session.rs  issues.rs  task.rs  webhook.rs
engine/houston-linear/src/mutations/: agent_activity.rs
engine/houston-linear/src/queries/: issues.rs  viewer.rs
flatpak/: com.houston.app.desktop  com.houston.app.metainfo.xml  com.houston.app.yml  houston
growth/: utm-conventions.md
houston-relay/: package.json  wrangler.toml
knowledge-base/: README.md  advanced-checkpoints.md  advanced-context-meter.md  advanced-git-panel.md  advanced-tile-layout.md  advanced-timeline.md  advanced-worktrees.md  agent-dogfood-loop.md  agent-isolation.md  agent-manifest.md  agent-store.md  anthropic-credentials.md  architecture.md  auth-migration.md  auth.md  beltic-integration.md  cli-bundling.md  client-architecture.md  data-rituals.md  design-system-history.md  design-system.md  dev-loop.md  dictation.md  engine-protocol.md  engine-server.md  feature-flags.md  files-first.md  i18n.md  integrations.md  local-models.md  platform-matrix.md  portable-agents.md  production-infra.md  provider-errors.md  quality-and-release.md  skill-inspector.md  skills.md  stack-recommender.md  teams.md  tracker-integration.md  (+3 more)
mobile/: .gitignore  PARITY-CHAT.md  PARITY-SETTINGS.md  PARITY.md  capacitor.config.ts  package.json  wrangler.toml
patches/: remend@1.3.0.patch
scripts/: backfill-migrated-flag.mjs  build-flatpak-local.sh  build-host-sidecar.sh  build-whisper.sh  bump-cli.sh  cargo-sync-check.sh  check-boundaries.mjs  check-cli-deps.sh  check-dev.sh  check-tauri-shims.mjs  dev-cloud.sh  dev-doctor.mjs  enrich-composio-catalog.mjs  fetch-cli-deps.sh  fetch-frpc.sh  gen-agent-templates.mjs  gen-skill-catalog-i18n.mjs  (+15 more)
(+3427 files in other folders)
