[workspace]
resolver = "2"
members = [
    "app/src-tauri",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# Keep line-table debug info in release binaries so Sentry can symbolicate
# Rust panics to file:line. Costs ~10-15% binary size; full debug info is
# stripped, only line tables remain. sentry-cli debug-files upload extracts
# these in CI and ships them to the Sentry org for symbolication.
[profile.release]
debug = "line-tables-only"
