[package]
name = "houston-beltic"
version = "0.4.12"
edition = "2021"
description = "Beltic verifiable-credentials integration — REST client, issuer, JWT-VC verifier, webhook verifier (transport-neutral)"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
thiserror = "1"

# HTTP client (matches version pinned in houston-composio)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# JWT-VC verification (ES256 / P-256)
jsonwebtoken = "9"

# Webhook HMAC (Beltic-Signature: sha256=<hex>)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2"

# Status List 2021 — base64url + gzip bitstring
base64 = "0.22"
flate2 = "1"

# URL parsing for the jwks/status-list URL derivation
url = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util"] }
