[package]
name = "houston-linear"
version = "0.4.12"
edition = "2021"
description = "Linear project-tracker integration — GraphQL client, OAuth, AgentSession protocol, webhook verification, polling reconcile (transport-neutral)"
license = "MIT"
repository = "https://github.com/gethouston/houston"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# HTTP client for GraphQL requests + OAuth code-exchange
reqwest = { version = "0.12", features = ["json"] }

# Webhook HMAC verification (SHA-256 over raw body, constant-time compare).
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"

# URL building for OAuth authorize redirects.
url = "2.5"

# Structured error type per CLAUDE.md "type safety over strings".
thiserror = "1"

# Cross-platform home-directory resolution. Matches the pattern in
# houston-composio for keychain entry locations.
dirs = "5"

houston-ui-events = { workspace = true }
houston-engine-protocol = { workspace = true }

# Typed GraphQL client — codegen against vendored Linear schema.
# See schema/linear.graphql + build.rs.
cynic = { version = "3", features = ["http-reqwest"] }

[build-dependencies]
# cynic-codegen runs at build time. Re-runs whenever
# schema/linear.graphql changes — see build.rs cargo::rerun-if-changed.
cynic-codegen = "3"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3"
